--- a/index.html
+++ b/index.html
@@ -689,113 +689,248 @@
                     top:60%;
                     left:90%;
                 }
-                /*.page31 h1{
-                    font-size: 45px;
-                }
-                .page31 p{
-                    width:700px;
-                    text-align: center;
-                }
-                .page4{
-                    height:1950px;
-                }
-                .page42{
-                    margin-bottom: 600px;
-                    flex-direction: column;
-                }
-                .page42 .image43{
-                    min-height: 530px;
-                }
-                .image43 p{
-                    padding: 20px;
-                    font-size: 20px;
-                }
-                .page5{
-                    min-height: 1680px;
-                }
-                .page52{
-                    flex-direction: column;
-                    margin-top: 480px;
-                    margin-left:-200px;
-                }
-                .page55{
-                    min-height:500px;
-                }
-                .page55 p{
-                    font-size: 20px;
-                    padding:10px;
-                }
-                .page6{
-                    min-height: 1400px;
-                    flex-direction: column;
-                }
-                .image61{
-                    max-height:500px;
-                    margin-top:20px;
-                }
-                .image61 img{
-                    max-width:550px;
-                    height:550px;
-                }
-                .page62{
-                    max-height: 750px;
-                    margin-top: 600px;
-                    margin-left: -550px;
-                    padding:-20px;
-                }
-                .page62 .p62{
-                    font-size: 45px;
-                }
-                .page62 .pp{
-                    font-size: 25px;
-                }
-                .page7{
-                    min-height: 1700px;
-                }
-                .page71 .h{
-                    font-size: 40px;
-                }
-                .page72,.page73{
-                    flex-direction: column;
-                }
-                .page113 iframe{
-                    width:650px;
-                    height:410px;
-                }
-                .page11 .page114{
-                   margin-left:20px;
-                }
                 .page121{
-                    min-height: 500px;
-                    display: flex;
+                    min-height:500px;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                }
-                .page122{
-                    height:300px;
                 }
                 .page122 ul{
                     flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                }
-                .page122 li{
-                    font-size: 21px;
-                }
-                .page123{
-                    height: 200px;
                 }
                 .page123 .img12{
                     margin:0;
-                    width:210px;
-                    height:200px;
                 }
-                .app{
-                    top:50%;
-                    left:70%;
-                    animation: none;
-                }*/
+        }
+        @media only screen and (min-width:721px) and (max-width:1170px){
+            body{
+                max-width:1170px;
+            }
+            .tags{
+                animation: none;
+                margin-left:-80px;
+                display: none;
+            }
+            .bars{
+                margin-left:-80px;
+                margin-top:100px;
+                width:80px;
+                height:80px;
+            }
+            .bars i{
+                font-size: 45px;
+            }
+            .page1,.page2,.page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
+                max-width:1170px;
+            }
+            .page1{
+                height:750px;
+            }
+            .logo img{
+                width:250px;
+                height:250px;
+            }
+            .page12{
+                width:1100px;
+            }
+            .app{
+                left:90%;
+            }
+            .page13{
+                width:500px;
+                margin-left:400px;
+                margin-top:-60px;
+                font-size:30px;
+                text-align: center;
+            }
+            .page13 h1{
+               font-size: 7vmin;
+               margin:-50px;
+            }
+            .page13 .pets{
+                font-size: 20vmin;
+                margin:10px;
+            }
+            .page13 .get{
+                margin-top:30px;
+            }
+            .page2{
+                height:300px;
+            }
+            .page2 .image2{
+                margin-left:-90px;
+            }
+            .image2 img{
+                height:220px;
+            }
+            .page3{
+                height:250px;
+            }
+            .page31 h1{
+                font-size: 6vmin;
+                text-decoration: underline;
+            }
+            .page31 p{
+                text-align: center;
+                font-size: 1.8vmin;
+            }
+            .page4{
+                height:2500px;
+            }
+            .page42{
+                flex-direction: column;
+            }
+            .image41,.image42,.image43{
+                width:500px;
+                min-height:700px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            .image41 img,.image42 img,.image43 img{
+                width:470px;
+                height:450px;
+            }
+            .image41{
+                margin-top:-1540px;
+            }
+            .image41 ul{
+                margin-left:80px;
+                font-size: 20px;
+            }
+            .image42 ul,.image43 p{
+                font-size:20px;
+            }
+            .page5{
+                min-height:2350px;
+            }
+            .page52{
+                flex-direction: column;
+            }
+            .page53,.page54,.page55{
+                min-width:500px;
+                min-height:700px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                font-size: 21px;
+            }
+            .page53 img,.page54 img,.page55 img{
+                width:470px;
+                height:470px;
+            }
+            .page53{
+                margin-top:1600px;
+            }
+            .page6{
+                min-height:1450px;
+            }
+            .image61,.page62{
+                height:540px;
+            }
+            .page62{
+                width:800px;
+                height:700px;
+                margin-top:700px;
+                margin-left:-750px;
+            }
+            .image61 img{
+                width:800px;
+                height:700px;
+            }
+            .page62 .p62{
+                margin-left:-50px;
+                font-size: 4vmin;
+                text-align: center;
+            }
+            .page62 .pp{
+                margin: 0;
+                width:700px;
+                font-size: 2.5vmin;
+                text-align: center;
+            }
+            .pp br{
+                display: none;
+            }
+            .page7{
+                min-height:1950px;
+            }
+            .page72,.page73{
+                flex-direction: column;
+            }
+            .page721,.page722,.page731,.page732{
+                min-width:600px;
+                min-height:270px;
+            }
+            .page721 p,.page722 p,.page731 p,.page732 p{
+                font-size: 2vmin;
+            }
+            .page721 h4,.page722 h4,.page731 h4,.page732 h4{
+                font-size: 2.5vmin;
+            }
+            .page721 h6,.page722 h6,.page731 h6,.page732 h6{
+                font-size: 20px;
+            }
+            .page10{
+                min-height:380px;
+            }
+            .page103 .p103{
+                width:800px;
+                font-size: 3.5vmin;
+            }
+            .page103 button{
+                width:200px;
+                height:70px;
+            }
+            .page103 .action{
+                font-size: 21px;
+            }
+            .page11{
+                min-height:1000px;
+            }
+            .page112 .h5{
+                margin:0;
+                margin:10px;
+                font-size: 2.8vmin;
+            }
+            .page112 .a{
+                margin:0;
+                margin:15px;
+                font-size:5vmin;
+            }
+            .page112 .b{
+                margin:10px;
+                font-size: 2.5vmin;
+            }
+            iframe{
+                width:900px;
+                height:600px;
+            }
+            .page11 .page114{
+                margin-left:230px;
+            }
+            .page121{
+                min-height:500px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            .page122 ul{
+                flex-direction: column;
+                align-items: center;
+            }
+            .page122 li{
+                font-size: 25px;
+            }
+            .page123 .img12{
+                margin:0;
+                width:200px;
+                height:200px;
+                margin-top:-40px;
+            }
+
         }
     </style>
     <div class="page1">
@@ -824,7 +959,7 @@
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1169"><a href="http://www.hanvis.in/about/" class="menu-link">Home</a></li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1170"><a href="http://www.hanvis.in/about/" class="menu-link">About</a></li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1172"><a href="http://www.hanvis.in/services/" class="menu-link">Services</a></li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="http://www.hanvis.in/contact/" class="menu-link">Contact</a></li>
+                <li class="m3nu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="http://www.hanvis.in/contact/" class="menu-link">Contact</a></li>
             </ul>
         </div>
         <script>
@@ -980,12 +1115,12 @@
           </div>
           <div class="page103">
             <h1 class="p103">Thank you for considering HANVI'S for your pet's healthcare needs.</h1>
-            <button>Call To Action</button>
+            <button class="action">Call To Action</button>
           </div></center>
     </div>
     <div class="page11">
         <div class="page112">
-            <h5>CONTACT</h5>
+            <h5 class="h5">CONTACT</h5>
             <h1 class="a">+918309112877</h1>
             <h3 class="b">8-3-167/D/7/4/C OPPOSITE CENTRAL BANK KALYAN<br/> NAGAR PHASE I, Hyderabad ,Telangana 500038</h3>
         </div>
