--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             color: white;
         }
         @media only screen and (max-width:400px){
-             html,body{
+             body{
                 margin:0;
                 max-width:400px;
                 height:7170px;
@@ -289,7 +289,6 @@
              #myVideo{
                 max-width:400px;
                 max-height:450px;
-                object-fit: fill;
              }
              .tags ul{
                 padding:0;
@@ -331,7 +330,7 @@
                 height:450px;
              }
              .page12{
-                max-width:340px;
+                max-width:360px;
                 margin-left:-10px;
                 display: flex;
                 justify-content: space-between;
@@ -351,12 +350,12 @@
              }
              .image2{
                 padding:0;
-                width:360px;
+                width:380px;
              }
              .image2 img{
-                max-width:360px;
-                height:120px;
-                margin-left:8px;
+                max-width:380px;
+                height:160px;
+                margin-left:0px;
              }
              .page3{
                 width:400px;
