--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             color: white;
         }
         @media only screen and (max-width:400px){
-             body{
+             html,body{
                 margin:0;
                 max-width:400px;
                 height:7170px;
