--- a/index.html
+++ b/index.html
@@ -283,12 +283,13 @@
              html,body{
                 margin:0;
                 max-width:400px;
-                height:7170px;
+                height:100vh;
                 overflow-x: hidden;
              }
              #myVideo{
                 max-width:400px;
                 max-height:450px;
+                object-fit:fill;
              }
              .tags ul{
                 padding:0;
@@ -814,7 +815,7 @@
             .tags{
                 position: absolute;
                 width:80px;
-                margin-left:1025px;
+                margin-left:900px;
                 top:20%;
                 height:300px;
                 background:#f3df11;
@@ -1073,13 +1074,23 @@
             .bars{
                 display: none;
             }
+            #myVideo{
+                min-width:100%;
+                max-height:625px;
+            }
+            .page1,.page12,.page2,.page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
+                min-width:100vw;
+            }
+            .page114{
+                min-width:55vw;
+            }
         }
         #myVideo{
             position: absolute;
             width:1370px;
             height:100vh;
             object-fit: fill;
-            z-index:-1;
+            z-index:-100;
         }
     </style>
     <div class="page1">
