--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
              html,body{
                 margin:0;
                 max-width:400px;
-                height:100vh;
+                height:500vh;
                 overflow-x: hidden;
              }
              #myVideo{
@@ -1078,7 +1078,7 @@
                 min-width:100%;
                 max-height:625px;
             }
-            .page1,.page12,.page2,.page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
+            .page1,.page12,.page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
                 min-width:100vw;
             }
             .page114{
@@ -1099,7 +1099,7 @@
           </video>
         <div class="page12">
             <div class="logo">
-                <img src="images/page1.logo.png" width="117px" height="117px" style="margin-left:50px">
+                <img src="images/page1.logo.png" width="117px" height="117px" >
             </div>
             <div class="bars" id="bars">
             <i class="fa fa-bars" onclick="tags()"></i>
@@ -1116,8 +1116,6 @@
                 </div>
             </div>
         </div>
-    
-
         <div class="page0" id="page0" style="display: none;">
             <ul>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1169"><a href="http://www.hanvis.in/about/" class="menu-link">Home</a></li>
