--- a/index.html
+++ b/index.html
@@ -1078,11 +1078,14 @@
                 min-width:100%;
                 max-height:625px;
             }
-            .page1,.page12,.page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
+            .page1,.page3,.page4,.page5,.page6,.page7,.page8,.page10,.page11,.page121{
                 min-width:100vw;
             }
             .page114{
                 min-width:55vw;
+            }
+            .page12{
+                min-width:95vw;
             }
         }
         #myVideo{
