--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
                 overflow-x: hidden;
              }
              #myVideo{
+                position:fixed;
                 max-width:400px;
                 max-height:450px;
                 object-fit:fill;
@@ -327,6 +328,7 @@
                 margin-top:0px;
             }
              .page1{
+                position: relative;
                 width:400px;
                 height:450px;
              }
