--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HANVIS | PET STORE</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -1187,7 +1188,7 @@
             <center><div class="line"></div></center>
         </div>
         <div class="page42">
-           <div class="image41">
+           <div class="image41 reveal">
                 <img src="images/image41.jpeg" width="340px" height="310px">
                 <h2>MEDICAL SERVICES</h2>
                 <ul  style="list-style-type: none;">
@@ -1560,7 +1561,7 @@
         menubtn.addEventListener('click',()=>{
             tag.classList.toggle('mobile-menu');
         })
-           /* function reveal() {
+           function reveal() {
             var reveals = document.querySelectorAll(".reveal");
 
             for (var i = 0; i < reveals.length; i++) {
@@ -1576,7 +1577,7 @@
             }
             }
 
-            window.addEventListener("scroll", reveal);*/
+            window.addEventListener("scroll", reveal);
     </script>
 </body>
 </html>
