--- a/index.html
+++ b/index.html
@@ -1561,7 +1561,7 @@
         menubtn.addEventListener('click',()=>{
             tag.classList.toggle('mobile-menu');
         })
-           function reveal() {
+           /*function reveal() {
             var reveals = document.querySelectorAll(".reveal");
 
             for (var i = 0; i < reveals.length; i++) {
@@ -1576,7 +1576,7 @@
                 }
             }
             }
-            window.addEventListener("scroll", reveal);
+            window.addEventListener("scroll", reveal);*/
     </script>
 </body>
 </html>
