--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@
              }
              .page41 h1{
                 margin-left:55px;
-                font-size: 30px;
+                font-size: 40px;
+                text-align: center;
             }
             .image41,.image42,.image43{
                 width:350px;
@@ -414,7 +415,8 @@
              }
              
              .line{
-                margin-left:-10px;
+                margin-left:0px;
+                margin-top:-15px;
              }
              .page5{
                 width:400px;
@@ -1561,7 +1563,7 @@
         menubtn.addEventListener('click',()=>{
             tag.classList.toggle('mobile-menu');
         })
-           /*function reveal() {
+           function reveal() {
             var reveals = document.querySelectorAll(".reveal");
 
             for (var i = 0; i < reveals.length; i++) {
@@ -1576,7 +1578,7 @@
                 }
             }
             }
-            window.addEventListener("scroll", reveal);*/
+            window.addEventListener("scroll", reveal);
     </script>
 </body>
 </html>
